# budgetv2

./: Cargo.toml  docker-compose.yaml  make.nu
migrations/: 000_init.sql  001_create_account.sql  002_create_account_number_reference.sql
src/: main.rs  migration.rs  models.rs
src/front/: mod.rs  template.rs
src/front/accounts/: api.rs  mod.rs
src/front/components/: table.rs
src/front/public/: alpine-ajax-0.10.4.min.js
src/front/templates/: accounts.get.hbs  api.expenses.hbs  base.hbs  base.notification.hbs  component.table.hbs  entry.hbs  entry_details.hbs  error.get.hbs  expenses.hbs  index.balances.hbs  index.entries.hbs  index.hbs
