[package]
name = "budgetv2"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["multipart", "macros"] }
axum-macros = "0.4.2"
bigdecimal = { version = "0.4.6", features = ["serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
csv = "1.3.0"
env_logger = "0.11.5"
handlebars = "6.2.0"
log = "0.4.22"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "bigdecimal", "chrono"] }
tokio = { version = "~1.40.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["fs"] }
uuid = { version = "1.11.0", features = ["serde"] }
